Xpose 4 News/Changelog

Changes in version 4.5.3

  o Update to ind.plots() to allow subsets on a per-y-variable basis.  
    Useful to show IPRED and PRED in a finer grid than DV. See option
    “y.vals.subset”.

  o Various small bug fixes

Changes in version 4.5.2

  o Internal release  

  o Updates to read.bootscm.par.est()

Changes in version 4.5.1

  o Internal release  

  o Updated xpose.gam to work with the latest version of the gam package 

  o Updated kaplan.plot to allow for ylim specification when "cov" 
    argument is used.

  o Updated compute.cwres and associted functions to work with NONMEM 7.

  o Fixed warnings created in xpose.VPC.categorical when creating personalized 
    x and y axis labels.

Changes in version 4.5.0

  o External release with just one package instead of five.
  
  o Added to ind.plots so that when there is only one data point for an
    individual, the PRED and IPRED show up in the plot.

Changes in version 4.4.3

  o Internal release  
  
  o Added funcitonality for plotting the delta mean output from the
    vpc tool in PsN.  Option is for xpose.VPC() and can be turned on
    using PI.delta.mean=T.  See ?xpose.panel.default for more
    information.  

Changes in version 4.4.2 

  o Internal release

  o Removed some default messages that were print to the screen when
    running xpose.VPC().  can change back to previous behavior with
    option verbose=TRUE.

  o Combined the five packages of xpose into one package.

  o Updated the Histogram functionality.

  o New plots randtest.hist() and boot.hist() for creating histograms
    of results from PsN's 'randtest' and 'bootstrap' tools.

  o Updated the xpose.VPC() function to handle plotting of mean values
    from simulations.  

Changes in version 4.4.1

  o Updates to kaplan.plot.R (thanks to Leonid Gibiansky for reporting the problems)

  o kaplan.plot.R: Removed debugging command that was mistakenly left in function
