@@ -34,12 +34,12 @@
            logx         = FALSE,
            yscale.components= "default",#function(...) yscale.components.default(...),
            xscale.components= "default",#function(...) xscale.components.default(...),
-
+           
            aspect       = object@Prefs@Graph.prefs$aspect,
            funx         = NULL,
            funy         = NULL,
            iplot        = NULL,
-
+           
            ## Prediction interval settings
            PI           = NULL,
            
@@ -65,21 +65,21 @@
            
            ## Subset stuff
            subset       = xsubset(object),
-
+           
            autocorr=FALSE,
            
            ## Axes and titles
            main         = xpose.create.title(x,y,object,subset,funx,funy,...),
-                                        #main         = NULL,
+           #main         = NULL,
            xlb          = xpose.create.label(x,object,funx,logx,autocorr.x=autocorr,...),
            ylb          = xpose.create.label(y,object,funy,logy,autocorr.y=autocorr,...),
            ##xlb          = ifelse((length(x)>1),"Value",xlabel(x,object)),
            ##ylb          = ifelse((length(y)>1),"Value",xlabel(y,object)),
            scales       = list(),           
-
+           
            ## Superpose smooth
            suline       = object@Prefs@Graph.prefs$suline,
-
+           
            ## Categorical stuff
            bwhoriz      = object@Prefs@Graph.prefs$bwhoriz,
            
@@ -89,9 +89,9 @@
            diltype      = object@Prefs@Graph.prefs$diltype,
            dilci        = object@Prefs@Graph.prefs$dilci,
            seed         = NULL,
-
-
-
+           
+           
+           
            mirror       = FALSE,
            max.plots.per.page=4,
            mirror.aspect="fill",
@@ -101,16 +101,16 @@
            main.cex     = NULL,
            mirror.internal=list(strip.missing=missing(strip)),
            ...
-           ) {
-
+  ) {
+    
     ## CHecks if use.xpose.factor.strip.names is a logical a length 1
     if (!(class(use.xpose.factor.strip.names)=="logical" & 
-          length(use.xpose.factor.strip.names)==1)){
+            length(use.xpose.factor.strip.names)==1)){
       stop("The provided use.xpose.factor.strip.names argument is not a logical of length 1")
     }
-
+    
     plotTitle <- main
-
+    
     ## for MIRROR functionality
     arg.list <- formals(xpose.plot.default)
     arg.names <- names(arg.list)
@@ -135,12 +135,12 @@
       create.mirror(xpose.plot.default,
                     new.arg.list,mirror,plotTitle,...)
     } else { # end if mirror
-
-
+      
+      
       ##Get data
       if(any(is.null(iplot))) {
         if(!is.null(samp)) {
-                                        #cat(samp)
+          #cat(samp)
           data <- SData(object,inclZeroWRES,onlyfirst=onlyfirst,
                         subset=subset,samp=samp)
         } else {
@@ -149,7 +149,7 @@
       } else {
         data <- Data(object,inclZeroWRES,onlyfirst=onlyfirst,subset=NULL)
       }
-
+      
       ## Strip "missing" data
       data <- subset(data, get(x) != object@Prefs@Miss)
       data <- subset(data, get(y) != object@Prefs@Miss)
@@ -162,7 +162,7 @@
           data[,b] <- as.factor(data[,b])
         }
       }
-
+      
       ## Sort out dilution
       dilsubset <- TRUE
       dilname   <- NULL
@@ -187,7 +187,7 @@
           }
         }
       }
-
+      
       ## Check to see if x and y are both longer than 1
       if(length(x)>1 && length(y)>1) {
         cat("x and y can not both be longer than 1\n")
@@ -200,18 +200,18 @@
         reps <-c(xvardef("id",object),xvardef("idlab",object),
                  xvardef("wres",object),y,groups)
         if(!is.null(dilname)) reps <- c(reps,dilname)
-
+        
         if(!is.null(by)) reps <- c(reps,by)
-                                        #data <- stack.xpose(data,object,x,reps)
+        #data <- stack.xpose(data,object,x,reps)
         data <- xpose.stack(data,object,x,reps)
         object <- new("xpose.data",
                       Runno=object@Runno,
                       Data = NULL,
                       Prefs = object@Prefs)
-
+        
         Data(object) <- data
-                                       #cat(object@Prefs@Graph.prefs$type)
-
+        #cat(object@Prefs@Graph.prefs$type)
+        
         if(is.null(main.cex)) main.cex <- 0.9
         onlyfirst = FALSE
         if(is.null(by)) {
@@ -219,16 +219,16 @@
         } else {
           by <- c("ind",by)
         }
-
+        
         x <- "values"
-
+        
         ## If scales is longer than one then the users has supplied it
         ##as an argument.
         if(length(scales)==0) {
           scales=list(x=list(relation="free"))
         }
       }
-
+      
       ## Check to see if more than one y-variable
       if(length(y) > 1) {
         reps <- c(object@Prefs@Xvardef["id"],
@@ -237,33 +237,33 @@
         if(!is.null(dilname)) reps <- c(reps,dilname)
         
         if(!is.null(by)) reps <- c(reps,by)
-                                        #data <- stack.xpose(data,object,y,reps)
+        #data <- stack.xpose(data,object,y,reps)
         data <- xpose.stack(data,object,y,reps)
         object <- new("xpose.data",
                       Runno=object@Runno,
                       Data = NULL,
                       Prefs = object@Prefs)
-
+        
         Data(object) <- data
-
+        
         if(is.null(main.cex)) main.cex <- 0.9
         onlyfirst = FALSE
-
+        
         if(is.null(by)) {
           by <- "ind"
         } else {
           by <- c("ind",by)
         }
-
+        
         y <- "values"
-
+        
         ## If scales is longer than one then the users has supplied it
         ##as an argument.
         if(length(scales)==0) {
           scales=list(y=list(relation="free"))
         }
       }
-
+      
       
       ## Collect the basic plot formula
       bb <- NULL
@@ -278,9 +278,9 @@
         for(b in by) {
           
           ##b <- by[bs]
-
+          
           bb <- c(bb,xlabel(b,object))
-
+          
           if(!is.factor(data[,b])) {
             if(is.null(by.interval)){
               data[,b] <- equal.count(data[,b],number=shingnum,overl=shingol)
@@ -288,11 +288,11 @@
               data[,b] <- shingle(data[,b],intervals=by.interval)
             }
           } else {
-
+            
             if(any(!is.null(ordby))) {
               data[,b] <- reorder(data[,b],data[,ordby],byordfun)
             }
-
+            
             if(names(data[,b,drop=F])!="ind") {
               if(use.xpose.factor.strip.names){
                 levels(data[,b]) <-
@@ -309,20 +309,20 @@
           formel <-  paste(y,"~",x,"|",bys,sep="")
         }
       }
-
+      
       if(missing(strip)) {
         strip <- function(var.name,...)
           strip.default(var.name=bb,strip.names=c(F,T),...)
       }
-
+      
       ## Check to see if panel.superpose should be used
       if(any(!is.null(groups))) groups <- data[,groups]
-
+      
       ## CHeck to see if a superpose smooth is to be used.
       if(!is.null(suline)) {
         suline <- data[,suline]
       }
-
+      
       ## Check for id-numbers as plotting symbols
       ##if(!is.null(ids)) ids <- data[,xvardef("idlab",object)]
       if(ids){
@@ -354,21 +354,21 @@
       ## Sort out the scales
       yscale.components.defined <- T
       xscale.components.defined <- T
-
+      
       if(!is.function(yscale.components)){
         if(!is.na(match(yscale.components,"default"))) {
           yscale.components= function(...) yscale.components.default(...)
           yscale.components.defined <- F
         }
       }
-
+      
       if(!is.function(xscale.components)){
         if(!is.na(match(xscale.components,"default"))) {
           xscale.components= function(...) xscale.components.default(...)
           xscale.components.defined <- F
         }
       }
-
+      
       if(logy) {
         scales$y$log <- TRUE
         if(!yscale.components.defined){
@@ -381,7 +381,7 @@
           xscale.components=xpose.xscale.components.log10
         }
       }
-
+      
       
       xvarnam <- x
       yvarnam <- y
@@ -400,7 +400,7 @@
           ylb <- list(ylb,cex=y.cex)
         }
       }
-
+      
       if(is.null(main)) {
       } else {
         if(!is.null(main.cex)) {
@@ -411,7 +411,7 @@
           }
         }
       }
-
+      
       
       ## for autocorrelation (not working completely yet)
       if(autocorr){
@@ -435,16 +435,19 @@
           }
         }
         
-                                        #xlb <- paste(xlb,"(i)",sep="")
-                                        #ylb <- paste(ylb,"(i+1)",sep="")
+        #xlb <- paste(xlb,"(i)",sep="")
+        #ylb <- paste(ylb,"(i+1)",sep="")
         
-                                        #x <- xplt1
-                                        #y <- xplt2
-                                        #groups <- xgrps
+        #x <- xplt1
+        #y <- xplt2
+        #groups <- xgrps
       }
-
+      
       xplot <- xyplot(formula(formel),data,obj=object,
                       prepanel = function(x,y) {
+                        xlim <- NULL
+                        ylim <- NULL
+                        ret <- list()
                         if(is.factor(x)){#length(levs <- unique(x)) < object@Prefs@Cat.levels) {
                           if(length(grep("[A-Z,a-z]",levels(x)))==0) {
                             xlim <- as.character(sort(as.numeric(levels(x))))
@@ -452,18 +455,21 @@
                             xlim <- sort(levels(x))
                           }
                         } else {
-                          xlim <- range(x)
+                          #xlim <- range(x)
                         }
+                        ret[["xlim"]] <- xlim
                         if(is.factor(y)){#length(levs <- unique(x)) < object@Prefs@Cat.levels) {
                           if(length(grep("[A-Z,a-z]",levels(y)))==0) {
                             ylim <- as.character(sort(as.numeric(levels(y))))
                           } else {
-                          ylim <- sort(levels(y))
-                        }
+                            ylim <- sort(levels(y))
+                          }
                         } else {
-                          ylim <- range(y)
+                          #ylim <- range(y)
                         }
-                        list(xlim=xlim,ylim=ylim)
+                        ret[["ylim"]] <- ylim
+                        #list(xlim=xlim,ylim=ylim)
+                        return(ret)
                       },
                       onlyfirst = onlyfirst,
                       samp   = samp,
@@ -490,9 +496,9 @@
                       scales=scales,
                       iplot=iplot,
                       autocorr=autocorr,
-                                        #autocorr=FALSE,
+                      #autocorr=FALSE,
                       PI.subset=subset,
-                                        #drop.unused.levels=FALSE,
+                      #drop.unused.levels=FALSE,
                       ...)
       return(xplot)
     }
